--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.11.0
 aiosignal==1.3.1
 annotated-types==0.7.0
+anthropic==0.39.0
 anyio==4.6.2.post1
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+defusedxml==0.7.1
 distro==1.9.0
 frozenlist==1.5.0
 greenlet==3.1.1
@@ -17,6 +19,7 @@ jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.7
+langchain-anthropic==0.3.0
 langchain-core==0.3.18
 langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
