--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.36
 tenacity==9.0.0
 tiktoken==0.8.0
+toolz==1.0.0
 tqdm==4.67.0
 typing_extensions==4.12.2
 urllib3==2.2.3
