--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,31 @@ annotated-types==0.7.0
 anthropic==0.39.0
 anyio==4.6.2.post1
 attrs==24.2.0
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 defusedxml==0.7.1
 distro==1.9.0
+docstring_parser==0.16
 frozenlist==1.5.0
+google-api-core==2.23.0
+google-auth==2.36.0
+google-cloud-aiplatform==1.72.0
+google-cloud-bigquery==3.27.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.13.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpc-google-iam-v1==0.13.1
+grpcio==1.68.0
+grpcio-status==1.68.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+httpx-sse==0.4.0
 idna==3.10
 jiter==0.7.1
 jsonpatch==1.33
@@ -21,8 +37,10 @@ jsonpointer==3.0.0
 langchain==0.3.7
 langchain-anthropic==0.3.0
 langchain-core==0.3.18
+langchain-google-vertexai==2.0.7
 langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
+langchain-xai==0.1.0
 langsmith==0.1.143
 multidict==6.1.0
 numpy==1.26.4
@@ -30,12 +48,20 @@ openai==1.54.4
 orjson==3.10.11
 packaging==24.2
 propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9
+shapely==2.0.6
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 tenacity==9.0.0
