--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
 greenlet==3.1.1
+groq==0.12.0
 grpc-google-iam-v1==0.13.1
 grpcio==1.68.0
 grpcio-status==1.68.0
@@ -38,6 +39,7 @@ langchain==0.3.7
 langchain-anthropic==0.3.0
 langchain-core==0.3.18
 langchain-google-vertexai==2.0.7
+langchain-groq==0.2.1
 langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
 langchain-xai==0.1.0
