--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,15 @@ attrs==24.2.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+cohere==5.11.4
+dataclasses-json==0.6.7
 defusedxml==0.7.1
 distro==1.9.0
 docstring_parser==0.16
+fastavro==1.9.7
+filelock==3.16.1
 frozenlist==1.5.0
+fsspec==2024.10.0
 google-api-core==2.23.0
 google-auth==2.36.0
 google-cloud-aiplatform==1.72.0
@@ -31,32 +36,43 @@ h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 httpx-sse==0.4.0
+huggingface-hub==0.26.2
 idna==3.10
 jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.7
 langchain-anthropic==0.3.0
+langchain-cohere==0.3.1
+langchain-community==0.3.7
 langchain-core==0.3.18
+langchain-experimental==0.3.3
 langchain-google-vertexai==2.0.7
 langchain-groq==0.2.1
 langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
 langchain-xai==0.1.0
 langsmith==0.1.143
+marshmallow==3.23.1
 multidict==6.1.0
+mypy-extensions==1.0.0
 numpy==1.26.4
 openai==1.54.4
 orjson==3.10.11
 packaging==24.2
+pandas==2.2.3
+parameterized==0.9.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -65,11 +81,16 @@ rsa==4.9
 shapely==2.0.6
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.35
+tabulate==0.9.0
 tenacity==9.0.0
 tiktoken==0.8.0
+tokenizers==0.20.3
 toolz==1.0.0
 tqdm==4.67.0
+types-requests==2.32.0.20241016
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 yarl==1.17.1
