--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ httpx==0.27.2
 httpx-sse==0.4.0
 huggingface-hub==0.26.2
 idna==3.10
+iniconfig==2.0.0
 jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -62,6 +63,7 @@ orjson==3.10.11
 packaging==24.2
 pandas==2.2.3
 parameterized==0.9.0
+pluggy==1.5.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
@@ -70,6 +72,7 @@ pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
