--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.0
 aiosignal==1.3.1
+alembic==1.14.0
 annotated-types==0.7.0
 anthropic==0.39.0
 anyio==4.6.2.post1
@@ -39,6 +40,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.26.2
 idna==3.10
 iniconfig==2.0.0
+-e git+https://github.com/Xylon2/interrobench.git@2845e57bfdd9492d7956f800ee25b353ba6d20c0#egg=interrobench
 jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -54,6 +56,8 @@ langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
 langchain-xai==0.1.0
 langsmith==0.1.143
+Mako==1.3.6
+MarkupSafe==3.0.2
 marshmallow==3.23.1
 multidict==6.1.0
 mypy-extensions==1.0.0
@@ -67,6 +71,7 @@ pluggy==1.5.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
@@ -96,4 +101,5 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+wheel==0.45.1
 yarl==1.17.1
