--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.26.2
 idna==3.10
 iniconfig==2.0.0
--e git+https://github.com/Xylon2/interrobench.git@2845e57bfdd9492d7956f800ee25b353ba6d20c0#egg=interrobench
+-e git+https://github.com/Xylon2/interrobench.git@8356383457e1ebd2b9ddeb779ed43425c47c4f69#egg=interrobench
 jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -77,6 +77,7 @@ pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
+PyPika==0.48.9
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
