initial analysis script

--- a/setup.cfg
+++ b/setup.cfg
@@ -116,6 +116,14 @@ install_requires =
 dev = 
     pytest >= 8.3.3
 
+analysis =
+    matplotlib >= 3.9.3
+    numpy
+    pandas >= 2.2.3
+    scipy >= 1.14.1
+    scikit-learn >= 1.5.2
+
 [options.entry_points]
 console_scripts = 
     interrobench = interrobench.main:main
+    analysis = analysis.main:main
